Use valid category in library.properties
The previous category value caused the warning:

WARNING: Category 'Display,led' in library Colorduino is not valid. Setting to 'Uncategorized'

List of valid category values:
https://github.com/arduino/Arduino/wiki/Arduino-IDE-1.5:-Library-specification#libraryproperties-file-format

--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author=Sam C. Lin <lincomatic@hotmail.com>
 maintainer=Sam C. Lin <lincomatic@hotmail.com>
 sentence=Arduino Interface Library for ITeadStudio Colorduino and Colors Shield
 paragraph=Arduino Interface Library for ITeadStudio Colorduino and Colors Shield
-category=Display,led
+category=Display
 url=https://github.com/lincomatic/Colorduino
 architectures=avr
 includes=Colorduino.h
